# brrq

./: .gitignore  Cargo.toml  LICENSE  README.md  launch.sh  mainnet-genesis.toml  testnet-genesis.toml
contracts/brrq-contract-sdk/: Cargo.toml  link.ld
contracts/brrq-contract-sdk/src/: lib.rs
contracts/contract-tests/: Cargo.toml  build.rs
contracts/contract-tests/src/: harness.rs  lib.rs  proxy_tests.rs  treasury_tests.rs  wbrc_tests.rs
contracts/system/proxy/: Cargo.toml
contracts/system/proxy/src/: main.rs
contracts/system/treasury/: Cargo.toml
contracts/system/treasury/.cargo/: config.toml
contracts/system/treasury/src/: main.rs
contracts/system/wbrc/: Cargo.toml
contracts/system/wbrc/src/: main.rs
crates/brrq-api/: Cargo.toml
crates/brrq-api/src/: error.rs  events.rs  jsonrpc.rs  lib.rs  middleware.rs  portal.rs  rest.rs  server.rs  services.rs  state.rs  websocket.rs
crates/brrq-bitcoin/: Cargo.toml
crates/brrq-bitcoin/src/: anchor_service.rs  block_monitor.rs  deposit_watcher.rs  error.rs  lib.rs  rpc_client.rs  spv.rs  types.rs
crates/brrq-bitcoin/src/canary/: anchor_verifier.rs  deposit_validator.rs  mod.rs  readonly_client.rs  safety.rs  shadow_processor.rs
crates/brrq-bridge/: Cargo.toml
crates/brrq-bridge/src/: backend.rs  bitvm_compiler.rs  bridge.rs  challenge.rs  challenge_manager.rs  dispute_coordinator.rs  dispute_game.rs  error.rs  federation.rs  lib.rs  operator.rs  proof_store.rs  rate_limiter.rs  sequencer.rs  taproot.rs  types.rs  utxo_pool.rs  vm_state.rs
crates/brrq-consensus/: Cargo.toml
crates/brrq-consensus/src/: commit_reveal.rs  decentralization.rs  deprecation.rs  doctrine_firewall.rs  emergency.rs  epoch.rs  error.rs  fee_market.rs  fork_logic.rs  governance.rs  leader_election.rs  lib.rs  params.rs  registration.rs  rotation.rs  sequencer_engine.rs  slashing.rs  staking.rs  technical_council.rs  timelock.rs  validator.rs  view_sync.rs  vote_escrow.rs  wire.rs
crates/brrq-consensus/tla/: MC_Rotation.tla  Rotation.cfg  Rotation.tla
crates/brrq-crypto/: Cargo.toml
crates/brrq-crypto/src/: domain_tags.rs  encryption.rs  eots.rs  error.rs  hash.rs  lib.rs  merkle.rs  musig2.rs  poseidon2.rs  scalar.rs  schnorr.rs  sha256.rs  slh_dsa.rs  vrf.rs  zeroize.rs
crates/brrq-indexer/: Cargo.toml
crates/brrq-indexer/src/: db.rs  indexer.rs  lib.rs  models.rs  queries.rs  schema.rs
crates/brrq-network/: Cargo.toml
crates/brrq-network/src/: error.rs  gossip.rs  lib.rs  libp2p_transport.rs  message.rs  noise.rs  peer.rs  sync.rs
crates/brrq-node/: Cargo.toml
crates/brrq-node/src/: bitcoin_sync.rs  da.rs  genesis.rs  lib.rs  main.rs  message_handlers.rs  multi_sequencer.rs  network_service.rs
crates/brrq-node/src/node/: block_producer.rs  bridge_monitor.rs  consensus_handler.rs  mod.rs  portal_maintenance.rs
crates/brrq-node/src/platform/: file_ops.rs  metrics.rs  mod.rs  sandbox.rs
crates/brrq-portal/: Cargo.toml
crates/brrq-portal/src/: error.rs  escrow.rs  lib.rs  lock_pool.rs  maintenance.rs  nullifier.rs  persistence.rs  portal_key.rs  prepaid.rs  proof_of_purchase.rs  session_key.rs  settlement.rs  tee.rs  types.rs  uri.rs
crates/brrq-prover/: Cargo.toml
crates/brrq-prover/sp1-program/: Cargo.toml
crates/brrq-prover/sp1-program/src/: main.rs
crates/brrq-prover/src/: air.rs  batch.rs  coprocessor_air.rs  error.rs  field.rs  field_ext.rs  fri.rs  hash_config.rs  lib.rs  lookup.rs  plonky2_circuit.rs  plonky2_wrapper.rs  pool.rs  prover.rs  snark_wrapper.rs  sp1_wrapper.rs  trace_converter.rs  transcript.rs  types.rs  verifier.rs  zkla.rs
crates/brrq-prover/src/gpu/: cuda_ntt.rs  mod.rs
crates/brrq-sdk/: Cargo.toml
crates/brrq-sdk/src/: bps1.rs  client.rs  error.rs  lib.rs  light_client.rs  wallet.rs
crates/brrq-sequencer/: Cargo.toml
crates/brrq-sequencer/src/: block_builder.rs  error.rs  executor.rs  lib.rs  mempool.rs  mev.rs  traits.rs
crates/brrq-state/: Cargo.toml
crates/brrq-state/src/: error.rs  lib.rs  persistent.rs  proofs.rs  smt.rs  state_db.rs  world_state.rs
crates/brrq-types/: Cargo.toml
crates/brrq-types/src/: account.rs  address.rs  block.rs  da_trait.rs  gas.rs  lib.rs  log.rs  mev.rs  signature.rs  transaction.rs
crates/brrq-vm/: Cargo.toml
crates/brrq-vm/src/: cpu.rs  decoder.rs  error.rs  executor.rs  gas_meter.rs  instruction.rs  lib.rs  memory.rs  precompiles.rs  trace.rs
crates/brrq-wallet/: Cargo.toml
crates/brrq-wallet/src/: display.rs  keystore.rs  lib.rs  main.rs
docker/: Dockerfile.node  Dockerfile.web  docker-compose.testnet.yml  docker-compose.yml  nginx.conf
docs/: API-REFERENCE.md  BRRQ_ECONOMIC_SPECIFICATION.md  PORTAL-GUIDE.md  QUICKSTART.md  developer-guide.md  litepaper.md  portal-whitepaper.md  testnet-guide.md  whitepaper.md  yellow-paper.md
testnet/: genesis.json
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(explorer)/: layout.tsx
web/src/app/(explorer)/blocks/: page.tsx
web/src/app/(explorer)/bridge/: page.tsx
web/src/app/(explorer)/dashboard/: page.tsx
web/src/app/(explorer)/docs/: DocsClient.tsx  page.tsx
web/src/app/(explorer)/governance/: page.tsx
web/src/app/(explorer)/portal/: page.tsx
web/src/app/(explorer)/proofs/: page.tsx
web/src/app/(explorer)/sequencers/: page.tsx
web/src/app/(explorer)/txs/: page.tsx
web/src/app/(explorer)/validators/: page.tsx
web/src/components/dashboard/: RecentBlocks.tsx  RecentTxs.tsx  StatsCards.tsx
web/src/components/layout/: Footer.tsx  Header.tsx
web/src/components/providers/: QueryProvider.tsx
web/src/components/ui/: HashLink.tsx  LoadingSpinner.tsx  Pagination.tsx  SearchBar.tsx  ThemeToggle.tsx
web/src/hooks/: useAccount.ts  useBlocks.ts  useStats.ts  useTransactions.ts
web/src/lib/: api.ts  types.ts  utils.ts
