[package]
name = "brrq-portal"
description = "Brrq Portal - L3 Pragmatic Portal: Account+Escrow model with Nullifiers and Batch Settlement"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[features]
default = []

[dependencies]
brrq-crypto = { workspace = true }
brrq-types = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
