[package]
name = "brrq-sdk"
description = "Brrq developer SDK - client, wallet, contract tools"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

# dev-mode enables simulated proofs for development only.
[features]
default = []
dev-mode = ["brrq-prover/allow-simulated-proofs"]
real-plonky2 = ["brrq-prover/real-plonky2"]
light-client = []

[dependencies]
brrq-crypto = { workspace = true }
brrq-types = { workspace = true }
brrq-state = { workspace = true }
brrq-prover = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }

# TLS support — all https:// connections use real TLS via rustls
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-platform-verifier = { workspace = true }
