[package]
name = "brrq-types"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true
description = "Brrq core data types: transactions, blocks, accounts, addresses"

[dependencies]
brrq-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
imbl = { workspace = true }
