[workspace]
[package]
name = "treasury"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brrq-net/brrq"
homepage = "https://brrq.net"
description = "Brrq treasury contract"

[dependencies]
brrq-contract-sdk = { path = "../../brrq-contract-sdk" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
